[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/TestNetwork/TestNetwork.gd" type="Script" id=1]
[ext_resource path="res://tools/Network/Lobbies/LobbiesDiscover.gd" type="Script" id=2]
[ext_resource path="res://tools/Network/Lobbies/LobbyCreator.gd" type="Script" id=3]
[ext_resource path="res://tools/Network/Connections.tscn" type="PackedScene" id=4]

[node name="TestNetwork" type="Node"]
script = ExtResource( 1 )

[node name="LobbiesDiscover" type="Node" parent="."]
script = ExtResource( 2 )
port = 8081

[node name="GetLobbies" type="HTTPRequest" parent="LobbiesDiscover"]

[node name="LobbyCreator" type="Node" parent="."]
script = ExtResource( 3 )
port = 8081

[node name="CreateLobby" type="HTTPRequest" parent="LobbyCreator"]

[node name="HTTPRequest" type="HTTPRequest" parent="LobbyCreator"]

[node name="PingTimer" type="Timer" parent="LobbyCreator"]
wait_time = 10.0

[node name="Connections" parent="." instance=ExtResource( 4 )]

[node name="Control" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="CreateButton" type="Button" parent="Control/HBoxContainer"]
margin_right = 53.0
margin_bottom = 40.0
text = "Create"

[node name="JoinButton" type="Button" parent="Control/HBoxContainer"]
margin_left = 57.0
margin_right = 92.0
margin_bottom = 40.0
text = "Join"

[node name="World" type="Node2D" parent="."]
[connection signal="request_completed" from="LobbiesDiscover/GetLobbies" to="LobbiesDiscover" method="_on_GetLobbies_request_completed"]
[connection signal="request_completed" from="LobbyCreator/CreateLobby" to="LobbyCreator" method="_on_CreateLobby_request_completed"]
[connection signal="timeout" from="LobbyCreator/PingTimer" to="LobbyCreator" method="_on_PingTimer_timeout"]
[connection signal="connected" from="Connections" to="." method="_on_Connections_connected"]
[connection signal="player_connected" from="Connections" to="." method="_on_Connections_player_connected"]
[connection signal="player_disconnected" from="Connections" to="." method="_on_Connections_player_disconnected"]
[connection signal="pressed" from="Control/HBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
